--- a/Android/app/src/main/res/values-night/themes.xml
+++ b/Android/app/src/main/res/values-night/themes.xml
@@ -3,8 +3,9 @@
     <style name="Theme.Twitter" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimaryVariant">@color/black_500</item>
         <item name="colorOnPrimary">@color/black</item>
+        <item name="android:windowBackground">@color/black_500</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_200</item>
@@ -13,4 +14,5 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
 </resources>
