--- a/Android/app/src/main/res/layout/activity_splash.xml
+++ b/Android/app/src/main/res/layout/activity_splash.xml
@@ -4,9 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SplashActivity">
+    tools:context=".SplashActivity"
+    android:background="@color/blue_200">
 
     <androidx.appcompat.widget.AppCompatImageView
+        android:tint="@color/white"
         android:layout_width="@dimen/icon_width"
         android:layout_height="@dimen/icon_height"
         app:layout_constraintBottom_toBottomOf="parent"
