--- a/Android/app/src/main/res/layout/activity_starter.xml
+++ b/Android/app/src/main/res/layout/activity_starter.xml
@@ -6,4 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".StarterActivity">
 
+    <include
+        layout="@layout/app_bar_starter"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:textSize="30sp"
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Starter Activity"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
