--- a/Android/app/src/main/res/values-night/themes.xml
+++ b/Android/app/src/main/res/values-night/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Theme.Twitter" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
+        <item name="colorPrimary">@color/black_500</item>
         <item name="colorPrimaryVariant">@color/black_500</item>
         <item name="colorOnPrimary">@color/black</item>
         <item name="android:windowBackground">@color/black_500</item>
