new icon inserted -> home_stars | theme revised but not ready

--- a/Android/app/src/main/res/layout/app_bar_starter.xml
+++ b/Android/app/src/main/res/layout/app_bar_starter.xml
@@ -38,6 +38,15 @@
                 android:tint="@color/white"
                 android:layout_centerInParent="true"/>
 
+            <androidx.appcompat.widget.AppCompatImageView
+                android:tint="@color/white"
+                app:srcCompat="@drawable/home_stars"
+                android:layout_width="26dp"
+                android:layout_height="26dp"
+                android:layout_centerVertical="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="13dp"/>
+
         </RelativeLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
