--- a/Android/app/src/main/res/layout/fragment_welcome.xml
+++ b/Android/app/src/main/res/layout/fragment_welcome.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ /**
+  ~  * Created by cemaltuysuz on 10/27/21 7:01 PM
+  ~  * Copyright (c) 2021 . All rights reserved.
+  ~  * Last modified 10/27/21 7:01 PM
+  ~  */
+  -->
+
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".StarterActivity">
+    tools:context=".ui.fragments.starter.WelcomeFragment">
 
-    <include
-        layout="@layout/app_bar_starter"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 
 
