--- a/Android/app/src/main/res/layout/activity_starter.xml
+++ b/Android/app/src/main/res/layout/activity_starter.xml
@@ -8,11 +8,23 @@
     tools:context=".StarterActivity">
 
     <include
+        android:id="@+id/starter_app_bar"
         layout="@layout/app_bar_starter"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/fragment"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="match_parent"
+        app:defaultNavHost="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/starter_app_bar"
+        app:navGraph="@navigation/starter_navigation"
+        android:layout_height="0dip" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
