--- a/Android/app/src/main/res/layout/fragment_welcome.xml
+++ b/Android/app/src/main/res/layout/fragment_welcome.xml
@@ -13,7 +13,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.starter.WelcomeFragment">
+    tools:context=".ui.fragment.starter.WelcomeFragment">
 
 
     <androidx.appcompat.widget.AppCompatTextView
