--- a/Android/app/src/main/res/layout/activity_starter.xml
+++ b/Android/app/src/main/res/layout/activity_starter.xml
@@ -15,7 +15,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragment"
+        android:id="@+id/starter_navigation_container"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         app:defaultNavHost="true"
