--- a/Android/app/src/main/res/layout/fragment_register_first.xml
+++ b/Android/app/src/main/res/layout/fragment_register_first.xml
@@ -7,109 +7,122 @@
   ~  */
   -->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.fragment.starter.RegisterFirstFragment">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/registerFirstPageTitle"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="@dimen/starter_activity_margin"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:text="@string/register_first_page_title"
-        android:textSize="@dimen/welcome_text_size"
-        android:textStyle="bold"/>
+    <data>
+        <variable
+            name="ByViewModel"
+            type="com.cemaltuysuz.twitter.viewmodel.StarterViewModel" />
+
+    </data>
 
     <RelativeLayout
-        android:padding="15dp"
-        android:id="@+id/registerFirstInputContainer"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:gravity="center"
-        android:layout_below="@+id/registerFirstPageTitle">
+        android:layout_height="match_parent"
+        tools:context=".ui.fragment.starter.RegisterFirstFragment">
 
-        <!-- User name -->
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/registerFirstNameEditText"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:hint="@string/register_first_input_name"
-            style="@style/RegisterInputStyle"/>
-
-        <!-- User name error -->
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/registerFirstNameErrorTextView"
-            android:layout_below="@+id/registerFirstNameEditText"
-            style="@style/InputErrorText"/>
-
-        <!-- User name char count -->
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/registerFirstNameCharCount"
-            android:layout_width="wrap_content"
+            android:id="@+id/registerFirstPageTitle"
+            android:layout_marginTop="20dp"
+            android:layout_marginStart="@dimen/starter_activity_margin"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/registerFirstNameEditText"
-            android:layout_alignParentEnd="true"
-            android:text="@string/lorem2"/>
+            android:text="@string/register_first_page_title"
+            android:textSize="@dimen/welcome_text_size"
+            android:textStyle="bold" />
 
-        <!-- User Contact -->
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/registerFirstContactEditText"
-            android:layout_marginTop="@dimen/between_register_inputs"
-            android:layout_below="@+id/registerFirstNameErrorTextView"
-            android:hint="@string/register_first_input_contact"
-            style="@style/RegisterInputStyle"/>
+        <RelativeLayout
+            android:padding="15dp"
+            android:id="@+id/registerFirstInputContainer"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:gravity="center"
+            android:layout_below="@+id/registerFirstPageTitle">
 
-        <!-- User Contact Error -->
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/registerFirstContactErrorTextView"
-            android:layout_below="@+id/registerFirstContactEditText"
-            style="@style/InputErrorText"/>
+            <!-- User name -->
+            <androidx.appcompat.widget.AppCompatEditText
+                android:id="@+id/registerFirstNameEditText"
+                style="@style/RegisterInputStyle"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentEnd="true"
+                android:hint="@string/register_first_input_name"
+                android:maxLength="50"
+                android:text="@{ByViewModel.username}" />
 
-        <!-- User Date Of Birth -->
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/registerFirstDateOfBirth"
-            android:layout_marginTop="@dimen/between_register_inputs"
-            android:layout_below="@+id/registerFirstContactEditText"
-            android:hint="@string/register_first_date_of_birth"
-            style="@style/RegisterInputStyle"/>
+            <!-- User name error -->
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/registerFirstNameErrorTextView"
+                android:layout_below="@+id/registerFirstNameEditText"
+                style="@style/InputErrorText" />
+
+            <!-- User name char count -->
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/registerFirstNameCharCount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@{ByViewModel.username}"
+                android:layout_below="@+id/registerFirstNameEditText"
+                android:layout_alignParentEnd="true"/>
+
+            <!-- User Contact -->
+            <androidx.appcompat.widget.AppCompatEditText
+                android:id="@+id/registerFirstContactEditText"
+                android:layout_marginTop="@dimen/between_register_inputs"
+                android:layout_below="@+id/registerFirstNameErrorTextView"
+                android:hint="@string/register_first_input_contact"
+                style="@style/RegisterInputStyle" />
+
+            <!-- User Contact Error -->
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/registerFirstContactErrorTextView"
+                android:layout_below="@+id/registerFirstContactEditText"
+                style="@style/InputErrorText" />
+
+            <!-- User Date Of Birth -->
+            <androidx.appcompat.widget.AppCompatEditText
+                android:id="@+id/registerFirstDateOfBirth"
+                android:layout_marginTop="@dimen/between_register_inputs"
+                android:layout_below="@+id/registerFirstContactEditText"
+                android:hint="@string/register_first_date_of_birth"
+                style="@style/RegisterInputStyle" />
+
+        </RelativeLayout>
+
+
+        <RelativeLayout
+            android:padding="7dp"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_alignParentBottom="true"
+            android:background="?attr/colorOnPrimary">
+
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:visibility="gone"
+                android:id="@+id/changeContactType"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentBottom="true"
+                android:textAllCaps="false"
+                android:background="@drawable/light_stroke_line"
+                android:text="@string/register_first_use_email"
+                android:padding="10dp" />
+
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/routeRegisterSecondFragment"
+                android:layout_width="76dp"
+                android:layout_height="match_parent"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:textAllCaps="false"
+                android:background="@drawable/darker_gray_oval_button"
+                android:text="@string/next" />
+
+        </RelativeLayout>
+
 
     </RelativeLayout>
-
-
-    <RelativeLayout
-        android:padding="7dp"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:layout_alignParentBottom="true">
-
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:visibility="gone"
-            android:id="@+id/changeContactType"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
-            android:textAllCaps="false"
-            android:background="@drawable/light_stroke_line"
-            android:text="@string/register_first_use_email"
-            android:padding="10dp"/>
-
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/routeRegisterSecondFragment"
-            android:layout_width="76dp"
-            android:layout_height="match_parent"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:textAllCaps="false"
-            android:background="@drawable/darker_gray_oval_button"
-            android:text="@string/next"/>
-
-    </RelativeLayout>
-
-
-</RelativeLayout>
+</layout>
